docs/api/qiskit/0.19/qiskit.aqua.algorithms.HHL.md
---
title: HHL
description: API reference for qiskit.aqua.algorithms.HHL
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.algorithms.HHL
---

# HHL

<span id="qiskit.aqua.algorithms.HHL" />

`HHL(matrix, vector, truncate_powerdim=False, truncate_hermitian=False, eigs=None, init_state=None, reciprocal=None, num_q=0, num_a=0, orig_size=None, quantum_instance=None)`[GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/algorithms/linear_solvers/hhl.py "view source code")

The HHL algorithm.

The HHL algorithm (after the author’s surnames Harrow-Hassidim-Lloyd) is a quantum algorithm to solve systems of linear equations $A\overrightarrow{x}=\overrightarrow{b}$. Using Quantum Phase Estimation, the linear system is transformed into diagonal form in which the matrix $A$ is easily invertible. The inversion is achieved by rotating an ancillary qubit by an angle $\arcsin{ \frac{C}{\lambda_\mathrm{i}}}$ around the y-axis where $\lambda_\mathrm{i}$ are the eigenvalues of $A$. After uncomputing the register storing the eigenvalues using the inverse QPE, one measures the ancillary qubit. A measurement of 1 indicates that the matrix inversion succeeded. This leaves the system in a state proportional to the solution vector $\vert x\rangle$. In many cases one is not interested in the single vector elements of $\vert x\rangle$ but only on certain properties. These are accessible by using problem-specific operators. Another use-case is the implementation in a larger quantum program.

When using non-hermitian matrices and matrices with dimensions other than $2^{n}$ the must be converted to an hermitian matrix and next higher dimension $2^{n}$, respectively. The *truncate\_hermitian*, *truncate\_powerdim* flags and *orig\_size* are used to indicate conversion and the returned result of the HHL algorithm for expanded matrices will be truncated. The [`matrix_resize()`](qiskit.aqua.algorithms.HHL#matrix_resize "qiskit.aqua.algorithms.HHL.matrix_resize") method is provided for convenience to do this but any method of your choice can be used.

To further explain *truncate\_hermitian* indicates whether or not to truncate matrix and result vector to half the dimension by simply cutting off entries with other indices after the input matrix was expanded to be hermitian following

$$
\begin{split}\begin{pmatrix}
0 & A^\mathsf{H}\\
A & 0
\end{pmatrix}\end{split}
$$

where the conjugate transpose of matrix $A$ is denoted by $A^\mathsf{H}$. The truncation of the result vector is done by simply cutting off entries of the upper half.

*truncate\_powerdim* indicates whether to truncate matrix and result vector from dimension $2^{n}$ to dimension given by *orig\_size* by simply cutting off entries with larger indices.

Running the algorithm will execute the circuit and return the result vector, measured (real hardware backend) or derived (qasm\_simulator) via state tomography or calculated from the statevector (statevector\_simulator).

See also [https://arxiv.org/abs/0811.3171](https://arxiv.org/abs/0811.3171)

**Parameters**

*   **matrix** (`ndarray`) – The input matrix of linear system of equations
*   **vector** (`ndarray`) – The input vector of linear system of equations
*   **truncate\_powerdim** (`bool`) – Flag indicating expansion to 2\*\*n matrix to be truncated
*   **truncate\_hermitian** (`bool`) – Flag indicating expansion to hermitian matrix to be truncated
*   **eigs** (`Optional`\[[`Eigenvalues`](qiskit.aqua.components.eigs.Eigenvalues "qiskit.aqua.components.eigs.eigs.Eigenvalues")]) – The eigenvalue estimation instance
*   **init\_state** (`Optional`\[[`InitialState`](qiskit.aqua.components.initial_states.InitialState "qiskit.aqua.components.initial_states.initial_state.InitialState")]) – The initial quantum state preparation
*   **reciprocal** (`Optional`\[[`Reciprocal`](qiskit.aqua.components.reciprocals.Reciprocal "qiskit.aqua.components.reciprocals.reciprocal.Reciprocal")]) – The eigenvalue reciprocal and controlled rotation instance
*   **num\_q** (`int`) – Number of qubits required for the matrix Operator instance
*   **num\_a** (`int`) – Number of ancillary qubits for Eigenvalues instance
*   **orig\_size** (`Optional`\[`int`]) – The original dimension of the problem (if truncate\_powerdim)
*   **quantum\_instance** (`Union`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance"), [`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend"), `None`]) – Quantum Instance or Backend

**Raises**

**ValueError** – Invalid input

## Attributes

### backend

<span id="qiskit.aqua.algorithms.HHL.backend" />

`qiskit.providers.basebackend.BaseBackend`

Returns backend.

**Return type**

[`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend")

### quantum\_instance

<span id="qiskit.aqua.algorithms.HHL.quantum_instance" />

`Union[None, qiskit.aqua.quantum_instance.QuantumInstance]`

Returns quantum instance.

**Return type**

`Optional`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance")]

### random

Return a numpy random.

## Methods

### construct\_circuit

<span id="qiskit.aqua.algorithms.HHL.construct_circuit" />

`HHL.construct_circuit(measurement=False)`[GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/algorithms/linear_solvers/hhl.py "view source code")

Construct the HHL circuit.

**Parameters**

**measurement** (*bool*) – indicate whether measurement on ancillary qubit should be performed

**Returns**

the QuantumCircuit object for the constructed circuit

**Return type**

[QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")

### expand\_to\_hermitian

<span id="qiskit.aqua.algorithms.HHL.expand_to_hermitian" />

`static HHL.expand_to_hermitian(matrix, vector)`[GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/algorithms/linear_solvers/hhl.py "view source code")

Expand a non-hermitian matrix A to a hermitian matrix by \[\[0, A.H], \[A, 0]] and expand vector b to \[b.conj, b].

**Parameters**

*   **matrix** (*np.array*) – the input matrix
*   **vector** (*np.array*) – the input vector

**Returns**

the expanded matrix, the expanded vector

**Return type**

tuple(np.array, np.array)

### expand\_to\_powerdim

<span id="qiskit.aqua.algorithms.HHL.expand_to_powerdim" />

`static HHL.expand_to_powerdim(matrix, vector)`[GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/algorithms/linear_solvers/hhl.py "view source code")

Expand a matrix to the next-larger 2\*\*n dimensional matrix with ones on the diagonal and zeros on the off-diagonal and expand the vector with zeros accordingly.

**Parameters**

*   **matrix** (*np.array*) – the input matrix
*   **vector** (*np.array*) – the input vector

**Returns**

the expanded matrix, the expanded vector

**Return type**

tuple(np.array, np.array)

### matrix\_resize

<span id="qiskit.aqua.algorithms.HHL.matrix_resize" />

`static HHL.matrix_resize(matrix, vector)`[GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/algorithms/linear_solvers/hhl.py "view source code")

Resizes matrix if necessary

**Parameters**

*   **matrix** (*np.array*) – the input matrix of linear system of equations
*   **vector** (*np.array*) – the input vector of linear system of equations

**Returns**

new matrix, vector, truncate\_powerdim, truncate\_hermitian

**Return type**

tuple

**Raises**

**ValueError** – invalid input

### run

<span id="qiskit.aqua.algorithms.HHL.run" />

`HHL.run(quantum_instance=None, **kwargs)`

Execute the algorithm with selected backend.

**Parameters**

*   **quantum\_instance** (`Union`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance"), [`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend"), `None`]) – the experimental setting.
*   **kwargs** (*dict*) – kwargs

**Returns**

results of an algorithm.

**Return type**

dict

**Raises**

[**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – If a quantum instance or backend has not been provided

### set\_backend

<span id="qiskit.aqua.algorithms.HHL.set_backend" />

`HHL.set_backend(backend, **kwargs)`

Sets backend with configuration.

**Return type**

`None`

